scribble-test/src/test/resources/good/syntax/disamb/imports/Import02.scr
module good.syntax.disamb.imports.Import02;


import good.syntax.disamb.imports.pack1.Import02b;


global protocol Foo(role A, role B)
{
	choice at A
	{
		1() from A to B;
	}
	or
	{
		do good.syntax.disamb.imports.pack1.Import02b.Bar(A, B);
		do Bar(A, B);
	}
}


global protocol Bar(role C, role D)
{
	2() from C to D;
}

