scribble-test/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList01.scr
module bad.syntax.disamb.doarglist.DoArgList01;


global protocol Foo(role A, role B, role C)
{
	1() from A to B;
	1() from A to C;
	do Bar(A, B, C);
}

global protocol Bar(role D, role E)
{
	2() from D to E;
}
